--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/jetstream": "^1.3",
+        "laravel/sanctum": "^2.6",
+        "laravel/tinker": "^2.7",
+        "livewire/livewire": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
