--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/ui": "^0.6.0",
+        "alpinejs": "^2.7.3",
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "postcss-import": "^12.0.1",
+        "tailwindcss": "^1.8.0",
         "vite": "^3.0.0"
     }
 }
